Re-structure files, add calculator only page.

--- a/index.html
+++ b/index.html
@@ -6,37 +6,17 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Document</title>
+		<title>Main</title>
 		<link
 			rel="stylesheet"
-			href="style.css"
+			href="index.css"
 		/>
 	</head>
 	<body>
-		<div id="calculator">
-			<input id="display" readonly></input>
-			<div id="keys">
-				<button onclick="appendToDisplay('7')">7</button>
-				<button onclick="appendToDisplay('8')">8</button>
-				<button onclick="appendToDisplay('9')">9</button>
-				<button onclick="appendToDisplay('/')">/</button>
-				<button onclick="appendToDisplay('4')">4</button>
-				<button onclick="appendToDisplay('5')">5</button>
-				<button onclick="appendToDisplay('6')">6</button>
-				<button onclick="appendToDisplay('*')">*</button>
-				<button onclick="appendToDisplay('1')">1</button>
-				<button onclick="appendToDisplay('2')">2</button>
-				<button onclick="appendToDisplay('3')">3</button>
-				<button onclick="appendToDisplay('-')">-</button>
-				<button onclick="appendToDisplay('%')">%</button>
-				<button onclick="appendToDisplay('0')">0</button>
-				<button onclick="appendToDisplay('.')">.</button>
-				<button onclick="appendToDisplay('+')">+</button>
-				<button	onclick="clearDisplay()" class="clear">C</button>
-				<button onclick="calculate()" class="equal">=</button>
-			</div>
+		<div>
+			<a href="calculator.html">Calculator</a>
+			<a href="gradient.html"> Gradient and Display </a>
+			<a href="promise.html">Fetch Data with Promise</a>
 		</div>
-
-		<script src="./index.js"></script>
 	</body>
 </html>
