Added fetching data functions in different process.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div>
 			<a href="calculator.html">Calculator</a>
 			<a href="gradient.html"> Gradient and Display </a>
-			<a href="promise.html">Fetch Data with Promise</a>
+			<a href="fetch-data.html">Fetching Data</a>
 		</div>
 	</body>
 </html>
