--- a/fetch-data.html
+++ b/fetch-data.html
@@ -9,15 +9,27 @@
 		<title>Fetch Data Using Promise</title>
 		<link
 			rel="stylesheet"
-			href="promise.css"
+			href="fetch-data.css"
 		/>
 	</head>
 	<body>
 		<a href="index.html">Back</a>
-
+		<br />
+		<br />
+		<hr />
+		<h1>Using Promises</h1>
 		<div id="data-list"></div>
+		<hr />
+
+		<h1>Using Async Await</h1>
+		<div id="product-list"></div>
+		<hr />
+
+		<h1>Using Callback</h1>
+		<div id="callback-list"></div>
 
 		<script src="./promise.js"></script>
 		<script src="./asyncawait.js"></script>
+		<script src="./callback.js"></script>
 	</body>
 </html>
